--- a/package.json
+++ b/package.json
@@ -1,153 +1,155 @@
 {
-  "name": "ruta-del-puma-ionic",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build-device": "ionic cordova build --release android",
-    "build": "ionic cordova build --release --prod android",
-    "device": "ionic cordova run android --prod --release --device",
-    "emulador": "ionic cordova run android --emulator -l -c --release",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "get-hash-facebook": "keytool -list -printcert -jarfile ruta-del-puma.apk",
-    "keytool-generate": "keytool -genkey -v -keystore rutadelpuma.keystore -alias alias_name -keyalg RSA -keysize 2048 -validity 10000",
-    "keytool-get": "keytool -keystore rutadelpuma.keystore -list -v",
-    "jarsigner": "jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore rutadelpuma.keystore ./platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk alias_name",
-    "zipalign": "zipalign -v 4 ./platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk ruta-del-puma.apk"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.1.1",
-    "@angular/cdk": "^12.2.8",
-    "@angular/common": "~12.1.1",
-    "@angular/core": "~12.1.1",
-    "@angular/forms": "~12.1.1",
-    "@angular/material": "^12.2.8",
-    "@angular/platform-browser": "~12.1.1",
-    "@angular/platform-browser-dynamic": "~12.1.1",
-    "@angular/router": "~12.1.1",
-    "@ionic-native/call-number": "^5.36.0",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/diagnostic": "^5.36.0",
-    "@ionic-native/email-composer": "^5.36.0",
-    "@ionic-native/facebook": "^5.36.0",
-    "@ionic-native/geolocation": "^5.36.0",
-    "@ionic-native/google-plus": "^5.36.0",
-    "@ionic-native/launch-navigator": "^5.36.0",
-    "@ionic-native/photo-viewer": "^5.36.0",
-    "@ionic-native/twitter-connect": "^5.36.0",
-    "@ionic/angular": "^5.5.2",
-    "cordova-android": "9.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular-eslint/builder": "~12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
-    "@angular/language-service": "~12.0.1",
-    "@ionic/angular-toolkit": "^4.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "call-number": "^1.0.1",
-    "com-sarriaroman-photoviewer": "^1.2.5",
-    "cordova-plugin-actionsheet": "^2.3.3",
-    "cordova-plugin-androidx": "^3.0.0",
-    "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-email-composer": "^0.9.2",
-    "cordova-plugin-facebook-connect": "^3.2.0",
-    "cordova-plugin-geolocation": "^4.1.0",
-    "cordova-plugin-googleplus": "^8.5.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova.plugins.diagnostic": "^6.0.3",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "twitter-connect-plugin": "^0.6.0",
-    "typescript": "~4.2.4",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.6"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.rutadelpuma.xsour",
-        "WEB_APPLICATION_CLIENT_ID": "716595952138-3he5vbjmv06fqb5jmlnbip5rrcao93i5.apps.googleusercontent.com",
-        "PLAY_SERVICES_VERSION": "15.0.1"
-      },
-      "cordova-plugin-facebook-connect": {
-        "APP_ID": "398379705023720",
-        "APP_NAME": "Ruta del Puma",
-        "FACEBOOK_URL_SCHEME_SUFFIX": " ",
-        "OTHER_APP_SCHEMES": " ",
-        "FACEBOOK_AUTO_LOG_APP_EVENTS": "true",
-        "FACEBOOK_HYBRID_APP_EVENTS": "false",
-        "FACEBOOK_ADVERTISER_ID_COLLECTION": "true",
-        "FACEBOOK_ANDROID_SDK_VERSION": "11.3.0",
-        "FACEBOOK_IOS_SDK_VERSION": "11.1.0",
-        "FACEBOOK_BROWSER_SDK_VERSION": "v11.0"
-      },
-      "twitter-connect-plugin": {
-        "FABRIC_KEY": "AIzaSyDTGxVL74sXchI6frJXVATBA_tIjVLptyw"
-      },
-      "com-sarriaroman-photoviewer": {},
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
-      },
-      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
-        "GOOGLE_API_KEY_FOR_ANDROID": "AIzaSyDTGxVL74sXchI6frJXVATBA_tIjVLptyw",
-        "OKHTTP_VERSION": "3.+"
-      },
-      "cordova.plugins.diagnostic": {
-        "ANDROIDX_VERSION": "1.+"
-      },
-      "mx.ferreyra.callnumber": {},
-      "cordova-plugin-email-composer": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+    "name": "ruta-del-puma-ionic",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "https://ionicframework.com/",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ionic cordova build --release --prod android",
+        "device": "ionic cordova run android --prod --release --device",
+        "emulador": "ionic cordova run android --emulator -l -c --release",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "keytool-generate": "keytool -genkey -v -keystore rutadelpuma.keystore -alias alias_name -keyalg RSA -keysize 2048 -validity 10000",
+        "get-hash-facebook": "keytool -list -printcert -jarfile ruta-del-puma.apk",
+        "get-hash-google": "keytool -keystore rutadelpuma.keystore -list -v",
+        "build-device": "ionic cordova build --release android",
+        "jarsigner": "jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore rutadelpuma.keystore ./platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk alias_name",
+        "zipalign": "zipalign -v 4 ./platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk ruta-del-puma.apk"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.1.1",
+        "@angular/cdk": "^12.2.8",
+        "@angular/common": "~12.1.1",
+        "@angular/core": "~12.1.1",
+        "@angular/forms": "~12.1.1",
+        "@angular/material": "^12.2.8",
+        "@angular/platform-browser": "~12.1.1",
+        "@angular/platform-browser-dynamic": "~12.1.1",
+        "@angular/router": "~12.1.1",
+        "@ionic-native/call-number": "^5.36.0",
+        "@ionic-native/core": "^5.36.0",
+        "@ionic-native/diagnostic": "^5.36.0",
+        "@ionic-native/email-composer": "^5.36.0",
+        "@ionic-native/facebook": "^5.36.0",
+        "@ionic-native/geolocation": "^5.36.0",
+        "@ionic-native/google-plus": "^5.36.0",
+        "@ionic-native/launch-navigator": "^5.36.0",
+        "@ionic-native/photo-viewer": "^5.36.0",
+        "@ionic-native/twitter-connect": "^5.36.0",
+        "@ionic/angular": "^5.5.2",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.2.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.1.1",
+        "@angular-eslint/builder": "~12.0.0",
+        "@angular-eslint/eslint-plugin": "~12.0.0",
+        "@angular-eslint/eslint-plugin-template": "~12.0.0",
+        "@angular-eslint/template-parser": "~12.0.0",
+        "@angular/cli": "~12.1.1",
+        "@angular/compiler": "~12.1.1",
+        "@angular/compiler-cli": "~12.1.1",
+        "@angular/language-service": "~12.0.1",
+        "@ionic/angular-toolkit": "^4.0.0",
+        "@types/jasmine": "~3.6.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "@typescript-eslint/eslint-plugin": "4.16.1",
+        "@typescript-eslint/parser": "4.16.1",
+        "call-number": "^1.0.1",
+        "com-sarriaroman-photoviewer": "^1.2.5",
+        "cordova-android": "^9.1.0",
+        "cordova-plugin-actionsheet": "^2.3.3",
+        "cordova-plugin-androidx": "^3.0.0",
+        "cordova-plugin-androidx-adapter": "^1.1.3",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-dialogs": "^2.0.2",
+        "cordova-plugin-email-composer": "^0.9.2",
+        "cordova-plugin-facebook-connect": "^3.2.0",
+        "cordova-plugin-geolocation": "^4.1.0",
+        "cordova-plugin-googleplus": "^8.5.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^4.2.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova.plugins.diagnostic": "^6.0.3",
+        "eslint": "^7.6.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-jsdoc": "30.7.6",
+        "eslint-plugin-prefer-arrow": "1.2.2",
+        "jasmine-core": "~3.8.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~6.3.2",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "twitter-connect-plugin": "git+https://github.com/chroa/twitter-connect-plugin.git",
+        "typescript": "~4.2.4",
+        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.6"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-googleplus": {
+                "REVERSED_CLIENT_ID": "com.rutadelpuma.xsour",
+                "WEB_APPLICATION_CLIENT_ID": "716595952138-3he5vbjmv06fqb5jmlnbip5rrcao93i5.apps.googleusercontent.com",
+                "PLAY_SERVICES_VERSION": "15.0.1"
+            },
+            "cordova-plugin-facebook-connect": {
+                "APP_ID": "398379705023720",
+                "APP_NAME": "Ruta del Puma",
+                "FACEBOOK_URL_SCHEME_SUFFIX": " ",
+                "OTHER_APP_SCHEMES": " ",
+                "FACEBOOK_AUTO_LOG_APP_EVENTS": "true",
+                "FACEBOOK_HYBRID_APP_EVENTS": "false",
+                "FACEBOOK_ADVERTISER_ID_COLLECTION": "true",
+                "FACEBOOK_ANDROID_SDK_VERSION": "11.3.0",
+                "FACEBOOK_IOS_SDK_VERSION": "11.1.0",
+                "FACEBOOK_BROWSER_SDK_VERSION": "v11.0"
+            },
+            "twitter-connect-plugin": {
+                "FABRIC_KEY": "AIzaSyDTGxVL74sXchI6frJXVATBA_tIjVLptyw",
+                "TWITTER_KEY": "FcD6jqixVYKgvxCR9TedfQ0W2",
+                "TWITTER_SECRET": "DD5FRqQ5GJ8TdMqc7bfFZjU5MooCywsvWc5cjP7RC4zEprMno9"
+            },
+            "com-sarriaroman-photoviewer": {},
+            "cordova-plugin-geolocation": {
+                "GPS_REQUIRED": "true"
+            },
+            "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+                "GOOGLE_API_KEY_FOR_ANDROID": "AIzaSyDTGxVL74sXchI6frJXVATBA_tIjVLptyw",
+                "OKHTTP_VERSION": "3.+"
+            },
+            "cordova.plugins.diagnostic": {
+                "ANDROIDX_VERSION": "1.+"
+            },
+            "mx.ferreyra.callnumber": {},
+            "cordova-plugin-email-composer": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
+            "cordova-plugin-androidx": {},
+            "cordova-plugin-androidx-adapter": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
